samples/_failures_safe/1761719147_a9a17a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8099cdc1.c: In function ‘main’:
./samples/SAFE/__tmp_8099cdc1.c:155:19: error: expected ‘)’ at end of input
  155 |         if (choice
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_8099cdc1.c:155:9: error: expected declaration or statement at end of input
  155 |         if (choice
      |         ^~
./samples/SAFE/__tmp_8099cdc1.c:155:9: error: expected declaration or statement at end of input
